test/classes/jplevyak/record_type_hierarchy-2.good
Error: Unresolved call 'f(:D)' (record_type_hierarchy-2.chpl:16)
Candidates are:
  f(a: C)
